<resources>
    <string name="app_name">Travels</string>
    <string name="email">Email</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="registration">Registration</string>
    <string name="sign_in">Sign in</string>
    <string name="input_correct_email">Input correct email</string>
    <string name="short_password">Password must be at least 8 characters long</string>
    <string name="different_passwords">Passwords don\'t match</string>
    <string name="invalid_data">Input valid data</string>
    <string name="input_correct_firstname">Input correct firstname</string>
    <string name="input_correct_lastname">Input correct lastname</string>
    <string name="authorization">Authorization</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="wait_error">please, wait</string>
    <string name="unexpected_error">Something went wrong</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="not_found">Not found</string>
    <string name="search">Search</string>
    <string name="filter">filter</string>
    <string name="favorites">Favorites</string>
    <string name="image_of_place">image of place</string>
    <string name="places">places</string>
    <string name="profile">profile</string>
    <string name="routes">Routes</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="exit">Exit</string>
    <string name="avatar">Avatar</string>
    <string name="all_routes">all routes</string>
    <string name="all_places">all places</string>
    <string name="add_route">Add route</string>
    <string name="work_time">Work Time:</string>
    <string name="address">Address:</string>
    <string name="rating">Rating:</string>
    <string name="reviews">Reviews</string>
    <string name="rating_example">5.0</string>
    <string name="rate_it">Rate it:</string>
    <string name="review_hint">review</string>
    <string name="leave_review">Leave review</string>
    <string name="route_name">Route name</string>
    <string name="description">Description</string>
    <string name="add_places">Add places</string>
    <string name="create_route">Create route</string>
    <string name="empty_value">Fill in all the fields</string>
    <string name="empty_route_places">Add at least one place</string>
    <string name="fill_text">Fill in the field</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
</resources>