<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/search_bar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/shape_search_bar"
        android:elevation="6dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/filter_ic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/baseline_filter_list_24"
            android:contentDescription="@string/filter" />

        <EditText
            android:id="@+id/query_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:background="@color/md_theme_light_secondaryContainer"
            android:hint="@string/search"
            android:inputType="text"
            android:textColor="@color/md_theme_light_onSecondaryContainer"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/search_ic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/baseline_search_24"
            android:contentDescription="@string/search" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fav_routes_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        tools:itemCount="10"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_route" />

    <ProgressBar
        android:id="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_routes_fb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:src="@drawable/baseline_add_24"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/add_route" />

</androidx.constraintlayout.widget.ConstraintLayout>